5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1723_2507.log
== TEST (2019-05-14 16:01:48) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:06) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:07) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:07) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:12) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:15) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:15) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:42) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:50) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == crlha):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(senha == crlha):
NameError: name 'crlha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:03:19) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == "crlha"):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:03:19) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == "crlha"):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:03:29) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == "crlha"):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:03:30) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == "crlha"):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:03:38) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == "crlha"):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:03:45) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == "crlha"):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:04:12) 
-- CODE:
senha = ""

while(senha != "crlha"):
	input("senha desta poha: ")
	if(senha == "crlha"):
		print("acertou carai")
	else:
		print("vai se foder, meu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
